--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "passport-jwt": "^4.0.1",
     "prisma": "^6.15.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.5"
@@ -18,9 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.3",
     "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/passport-jwt": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.20.5"
   }
