--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^6.15.0",
+    "slug": "^11.0.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
@@ -29,6 +30,7 @@
     "@types/multer": "^2.0.0",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "@types/slug": "^5.0.9",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.20.5"
   }
